# rsnapshot-save

./: ChangeLog.md  LICENSE  README.md  rsnapshot-save.cabal
app/: Main.hs
files/: 06rsnapshot  rsnapshot-save.conf
