cabal-version: 1.12

name:           rsnapshot-save
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/rsnapshot-save#readme>
homepage:       https://github.com/sgf-dma/rsnapshot-save#readme
bug-reports:    https://github.com/sgf-dma/rsnapshot-save/issues
author:         sgf-dma
maintainer:     sgf@sgf-dma.tk
copyright:      2020 sgf-dma
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/sgf-dma/rsnapshot-save

executable rsnapshot-save-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , time
    , directory
    , transformers
    , process
    , typed-process
  default-language: Haskell2010

